tests/ui/or_3.stderr
error: expected format: pattern | poll!(future)
 --> tests/ui/or_3.rs:8:9
  |
8 |         _ | _ | poll!(invalid) => invalid,
  |         ^^^^^^^^^^^^^^^^^^^^^^
